[gd_scene load_steps=7 format=3 uid="uid://bxujno5kahon0"]

[ext_resource type="Texture2D" uid="uid://dl1smy20slpux" path="res://graphics/enemies/scout.png" id="1_0ds3c"]
[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_saxqo"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_t6g8j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uoijt"]
radius = 46.0109

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7jnbg"]
shader = ExtResource("2_t6g8j")
shader_parameter/color = Color(0.686828, 0.894579, 0.955092, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c3o37"]
radius = 715.07

[node name="Scout" type="CharacterBody2D" groups=["Entities", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_saxqo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uoijt")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_7jnbg")
position = Vector2(33, 30)
rotation = 1.5708
texture = ExtResource("1_0ds3c")

[node name="AttackArea" type="Area2D" parent="." groups=["Entities", "Scouts"]]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_c3o37")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(105, -26)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(108, 16)

[node name="Timers" type="Node" parent="."]

[node name="LaserTimer" type="Timer" parent="Timers"]

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_hit_timer_timeout"]
